# try-streamlit

./: README.md  untitled.code-workspace
.devcontainer/: devcontainer.json  postCreateCommand.bash
jupyter/: README.md  pyproject.toml
jupyter/src/jupyter/: sample.ipynb
sample_dash/: README.md  pyproject.toml
sample_dash/src/sample_dash/: app.py
sample_streamlit/: README.md  pyproject.toml
sample_streamlit/src/sample_streamlit/: app.py
