[tool.poetry]
name = "jupyter"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
packages = [{include = "jupyter", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
pandas-datareader = "^0.10.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
