[tool.poetry]
name = "sample-dash"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
packages = [{include = "sample_dash", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
